--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": "18.x"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"nodemon index.js",
+    "devStart": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,8 @@
     "axios": "^1.6.7",
     "dotenv": "^16.4.3",
     "express": "^4.18.2",
-    "express-session": "^1.18.0"
+    "express-session": "^1.18.0",
+    "nodemon": "^3.0.3",
+    "twilio": "^4.22.0"
   }
 }
