--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "node": "18.x"
   },
   "scripts": {
-    "start":"nodemon index.js",
-    "devStart": "nodemon index.js"
+    "start": "nodemon index.js",
+    "devStart": "nodemon index.js",
+    "build": "postcss public/tailwind/tailwind.css -o public/tailwind/styles.css --watch"
   },
   "keywords": [],
   "author": "",
@@ -21,5 +22,12 @@
     "express-session": "^1.18.0",
     "nodemon": "^3.0.3",
     "twilio": "^4.22.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "daisyui": "^4.8.0",
+    "postcss": "^8.4.38",
+    "postcss-cli": "^11.0.0",
+    "tailwindcss": "^3.4.1"
   }
 }
